--- a/index.html
+++ b/index.html
@@ -58,27 +58,27 @@
       </div>
       <div class="sidebar-main">
         <div class="list-group">
-          <a href="#simple-table-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Simple Table">Simple Table<i class="fa-solid fa-circle"></i></a>
-          <a href="#pluse-table-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Pluse Table">Pluse Table<i class="fa-solid fa-circle"></i></a>
-          <a href="#smartwizard-table-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Smartwizard Table">Smartwizard Table<i class="fa-solid fa-circle"></i></a>
-          <a href="#color-table-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Color Table">Color Table<i class="fa-solid fa-circle"></i></a>
-          <a href="#data-table-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Data Table">Data Table<i class="fa-solid fa-circle"></i></a>
-          <a href="#easing-table-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Easing Table">Easing Table<i class="fa-solid fa-circle"></i></a>
-          <a href="#fancy-table-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Fancy Table">Fancy Table<i class="fa-solid fa-circle"></i></a>
-          <a href="#slider-table-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Slider Table">Slider Table<i class="fa-solid fa-circle"></i></a>
-          <a href="#search-table-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Search Table">Search Table<i class="fa-solid fa-circle"></i></a>
-          <a href="#modal-table-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Modal Table">Modal Table<i class="fa-solid fa-circle"></i></a>
-          <a href="#parallax-table-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Parallax Table">Parallax Table<i class="fa-solid fa-circle"></i></a>
-          <a href="#scroll-table-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Scroll Table">Scroll Table<i class="fa-solid fa-circle"></i></a>
-          <a href="#sliderPro-table-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="SliderPro Table">SliderPro Table<i class="fa-solid fa-circle"></i></a>
-          <a href="#sortable-table-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Sortable Table">Sortable Table<i class="fa-solid fa-circle"></i></a>
-          <a href="#swiper-table-one-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Swiper Table One">Swiper Table One<i class="fa-solid fa-circle"></i></a>
-          <a href="#swiper-table-two-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Swiper Table Two">Swiper Table Two<i class="fa-solid fa-circle"></i></a>
-          <a href="#swiper-table-three-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Swiper Table Three">Swiper Table Three<i class="fa-solid fa-circle"></i></a>
-          <a href="#lettering-table-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Lettering Table">Lettering Table<i class="fa-solid fa-circle"></i></a>
-          <a href="#timeline-table-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Timeline Table">Timeline Table<i class="fa-solid fa-circle"></i></a>
-          <a href="#wow-table-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Wow Table">Wow Table<i class="fa-solid fa-circle"></i></a>
-          <a href="#music-table-title" class="list-group-item" data-toggle="tooltip" data-placement="right" title="Music Table">Music Table<i class="fa-solid fa-circle"></i></a>
+          <a href="#simple-table-title" class="list-group-item">Simple Table<i class="fa-solid fa-circle"></i></a>
+          <a href="#pluse-table-title" class="list-group-item">Pluse Table<i class="fa-solid fa-circle"></i></a>
+          <a href="#smartwizard-table-title" class="list-group-item">Smartwizard Table<i class="fa-solid fa-circle"></i></a>
+          <a href="#color-table-title" class="list-group-item">Color Table<i class="fa-solid fa-circle"></i></a>
+          <a href="#data-table-title" class="list-group-item">Data Table<i class="fa-solid fa-circle"></i></a>
+          <a href="#easing-table-title" class="list-group-item">Easing Table<i class="fa-solid fa-circle"></i></a>
+          <a href="#fancy-table-title" class="list-group-item">Fancy Table<i class="fa-solid fa-circle"></i></a>
+          <a href="#slider-table-title" class="list-group-item">Slider Table<i class="fa-solid fa-circle"></i></a>
+          <a href="#search-table-title" class="list-group-item">Search Table<i class="fa-solid fa-circle"></i></a>
+          <a href="#modal-table-title" class="list-group-item">Modal Table<i class="fa-solid fa-circle"></i></a>
+          <a href="#parallax-table-title" class="list-group-item">Parallax Table<i class="fa-solid fa-circle"></i></a>
+          <a href="#scroll-table-title" class="list-group-item">Scroll Table<i class="fa-solid fa-circle"></i></a>
+          <a href="#sliderPro-table-title" class="list-group-item">SliderPro Table<i class="fa-solid fa-circle"></i></a>
+          <a href="#sortable-table-title" class="list-group-item">Sortable Table<i class="fa-solid fa-circle"></i></a>
+          <a href="#swiper-table-one-title" class="list-group-item">Swiper Table One<i class="fa-solid fa-circle"></i></a>
+          <a href="#swiper-table-two-title" class="list-group-item">Swiper Table Two<i class="fa-solid fa-circle"></i></a>
+          <a href="#swiper-table-three-title" class="list-group-item">Swiper Table Three<i class="fa-solid fa-circle"></i></a>
+          <a href="#lettering-table-title" class="list-group-item">Lettering Table<i class="fa-solid fa-circle"></i></a>
+          <a href="#timeline-table-title" class="list-group-item">Timeline Table<i class="fa-solid fa-circle"></i></a>
+          <a href="#wow-table-title" class="list-group-item">Wow Table<i class="fa-solid fa-circle"></i></a>
+          <a href="#music-table-title" class="list-group-item">Music Table<i class="fa-solid fa-circle"></i></a>
         </div>
       </div>
       <hr>
@@ -354,26 +354,22 @@
             <ul class="nav nav-progress">
                 <li class="nav-item">
                     <a class="nav-link" href="#step-1">
-                    <div class="num">1</div>
-                    one
+                      <span class="num">1</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#step-2">
-                    <span class="num">2</span>
-                    two
+                      <span class="num">2</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#step-3">
-                    <span class="num">3</span>
-                    three
+                      <span class="num">3</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " href="#step-4">
-                    <span class="num">4</span>
-                    four
+                      <span class="num">4</span>
                     </a>
                 </li>
             </ul>
@@ -822,28 +818,26 @@
         <h3 class="my-5" id="data-table-title">5. Data Table <span style="font-size: 16px;">( with horizontal scroll in small devices )</span></h3>
         <section class="data-table">
           <table class="display" style="width:100%">
-            <div class="scroll-x">
-              <thead>
-                <tr>
-                  <th>Name</th>
-                  <th>Position</th>
-                  <th>Office</th>
-                  <th>Extn.</th>
-                  <th>Start date</th>
-                  <th>Salary</th>
-                </tr>
-              </thead>
-              <tfoot>
-                <tr>
-                  <th>Name</th>
-                  <th>Position</th>
-                  <th>Office</th>
-                  <th>Extn.</th>
-                  <th>Start date</th>
-                  <th>Salary</th>
-                </tr>
-              </tfoot>
-            </div>
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Position</th>
+                <th>Office</th>
+                <th>Extn.</th>
+                <th>Start date</th>
+                <th>Salary</th>
+              </tr>
+            </thead>
+            <tfoot>
+              <tr>
+                <th>Name</th>
+                <th>Position</th>
+                <th>Office</th>
+                <th>Extn.</th>
+                <th>Start date</th>
+                <th>Salary</th>
+              </tr>
+            </tfoot>
           </table>
         </section>
         <h3 class="my-5" id="easing-table-title">6. Easing Table</h3>
@@ -1217,7 +1211,7 @@
         <h3 class="my-5" id="modal-table-title">10. Modal Table</h3>
         <section class="modal-table">
           <button class="btn btn-info btn-block btn-lg" data-toggle="modal" data-target="#TableModal">Click</button>
-          <div id="TableModal" class="multi-step">
+          <div id="TableModal" class="multi-step"></div>
         </section>
         <h3 class="my-5" id="parallax-table-title">11. Parallax Table</h3>
         <section class="parallax-table">
@@ -6035,6 +6029,7 @@
                   </div>
                 </div>
               </div>
+              <h3 class="text-white bg-warning mb-0 py-3">my musics</h3>
               <table>
                 <colgroup>
                   <col width="10%">
@@ -6042,9 +6037,7 @@
                   <col width="5%">
                   <col width="20%">
                 </colgroup>
-                <thead>
-                  <h3 class="text-white bg-warning mb-0 py-3">my musics</h3>
-                </thead>
+                <thead></thead>
                 <tbody>
                   <tr class="play">
                     <td class="music-name text-left px-2">music one</td>
