--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8"/>                                                   
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>   
-    <title>sinafx2000@gmail.com</title>  
+    <title>Table</title>  
     <meta name="keywords" content="HTML , CSS , JavaScript , Table , animate , argon , bootstrap , color , dataTable , fancybox , jquery , easing , fittext , lettering , mCustomScrollbar , parallaxmouse , sliderPro , smartWizard , textillate , lightslider , Material+Icons , MultiStep , particles , popper , slider , Sortable , swiper-bundle , timeline , trycolorwheel , w3color , wow , music-player"/>                   
     <meta name="description" content="Table Template"/>                   
     <meta name="author" content="sina naseri"/>
